added hello there main

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 			h1 {
 				text-align: center;
 			}
+			p {
+				text-align: center;
+			}
 		</style>
 	</head>
 	<body>
 		<div>
 			<h1>This is a git control demo</h1>
+			<p>Hello There</p>
 		</div>
 	</body>
 </html>
